{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 102,
  "lineage": "734baaa8-d07c-f2af-eabe-b1b7c700fd90",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "torlo-eip-nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-36249bfb",
            "domain": "vpc",
            "id": "eipalloc-0f39ae77a4e6316bc",
            "network_interface": "eni-0e89a9572f1c9d4d5",
            "private_dns": "ip-10-0-10-75.ap-southeast-1.compute.internal",
            "private_ip": "10.0.10.75",
            "public_dns": "ec2-52-74-89-43.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.89.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "torlo-tform-ip-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-d9af3625",
            "domain": "vpc",
            "id": "eipalloc-03820c19a5517da5c",
            "network_interface": "eni-0292d5de0322f7a20",
            "private_dns": "ip-10-0-11-37.ap-southeast-1.compute.internal",
            "private_ip": "10.0.11.37",
            "public_dns": "ec2-13-228-6-208.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.6.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "torlo-tform-ip-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "torlo-tform-ansible",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-088f410fb8317eb48",
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:instance/i-0f0c1e6400d080eed",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f0c1e6400d080eed",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "torlov.test",
            "monitoring": false,
            "primary_network_interface_id": "eni-059fe1a13561661cc",
            "private_dns": "ip-10-0-10-147.ap-southeast-1.compute.internal",
            "private_ip": "10.0.10.147",
            "public_dns": "ec2-13-229-117-152.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.117.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cee3df3bfa101945",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0848bb14ba7cff3bb",
            "tags": {
              "Name": "torlo-tform-ansible-master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b4795297f3bbec8",
              "sg-0ad5c4ff5d91e351a"
            ]
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "torlo-tform-elastic1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b432b9079015a8c0",
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:instance/i-021d76e0e7730eeac",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-021d76e0e7730eeac",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "torlov.test",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c1ac430a4dda21bb",
            "private_dns": "ip-10-0-10-103.ap-southeast-1.compute.internal",
            "private_ip": "10.0.10.103",
            "public_dns": "ec2-13-229-87-63.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.87.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cc4efc0be9ec11df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0848bb14ba7cff3bb",
            "tags": {
              "Name": "torlo-tform-elastic1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00166d94495ac1c98",
              "sg-07b4795297f3bbec8"
            ]
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "torlo-tform-elastic2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b432b9079015a8c0",
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:instance/i-0871006df010884c4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0871006df010884c4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "torlov.test",
            "monitoring": false,
            "primary_network_interface_id": "eni-0745f0078bd52073a",
            "private_dns": "ip-10-0-10-137.ap-southeast-1.compute.internal",
            "private_ip": "10.0.10.137",
            "public_dns": "ec2-54-169-226-157.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.226.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a7a6979869dd08c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0848bb14ba7cff3bb",
            "tags": {
              "Name": "torlo-tform-elastic2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00166d94495ac1c98",
              "sg-07b4795297f3bbec8"
            ]
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "torlo-tform-elastic3",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b432b9079015a8c0",
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:instance/i-0f7edb69cfd69f58e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f7edb69cfd69f58e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "torlov.test",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e8db65d2039208b7",
            "private_dns": "ip-10-0-10-211.ap-southeast-1.compute.internal",
            "private_ip": "10.0.10.211",
            "public_dns": "ec2-54-169-122-33.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.122.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02c6b5e922f5d3a66",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0848bb14ba7cff3bb",
            "tags": {
              "Name": "torlo-tform-elastic3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00166d94495ac1c98",
              "sg-07b4795297f3bbec8"
            ]
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "torlo-tform-kibana",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b432b9079015a8c0",
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:instance/i-031e264c9593a762b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-031e264c9593a762b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "torlov.test",
            "monitoring": false,
            "primary_network_interface_id": "eni-0fddde4586abf8513",
            "private_dns": "ip-10-0-10-219.ap-southeast-1.compute.internal",
            "private_ip": "10.0.10.219",
            "public_dns": "ec2-54-179-155-104.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.155.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0187a6ac01a45d281",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0848bb14ba7cff3bb",
            "tags": {
              "Name": "torlo-tform-kibana"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b4795297f3bbec8",
              "sg-0ad5c4ff5d91e351a",
              "sg-0f5ec9a540af0bda4"
            ]
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "torlo-tform-logstash",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b432b9079015a8c0",
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:instance/i-0799557e9b647ffa2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0799557e9b647ffa2",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "torlov.test",
            "monitoring": false,
            "primary_network_interface_id": "eni-0482192d1c87c4dba",
            "private_dns": "ip-10-0-10-99.ap-southeast-1.compute.internal",
            "private_ip": "10.0.10.99",
            "public_dns": "ec2-13-229-111-88.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.111.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00290c510889b5b48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0848bb14ba7cff3bb",
            "tags": {
              "Name": "torlo-tform-logstash"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b4795297f3bbec8",
              "sg-083042f74ceff8893"
            ]
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "torlo-terraform-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02f4c2ede02558949",
            "owner_id": "004829846714",
            "tags": {
              "Name": "torlo-tform-igw"
            },
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_vpc.torlo-tform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-tform-nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f39ae77a4e6316bc",
            "id": "nat-0f55ddf0e5b0b169e",
            "network_interface_id": "eni-0e89a9572f1c9d4d5",
            "private_ip": "10.0.10.75",
            "public_ip": "52.74.89.43",
            "subnet_id": "subnet-0848bb14ba7cff3bb",
            "tags": {
              "Name": "torlo-tform-NAT-0"
            }
          },
          "depends_on": [
            "aws_eip.torlo-eip-nat",
            "aws_subnet.torlo-tform-pub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03820c19a5517da5c",
            "id": "nat-0f87f0c168d4f6c8a",
            "network_interface_id": "eni-0292d5de0322f7a20",
            "private_ip": "10.0.11.37",
            "public_ip": "13.228.6.208",
            "subnet_id": "subnet-0dfccb29d913726d0",
            "tags": {
              "Name": "torlo-tform-NAT-1"
            }
          },
          "depends_on": [
            "aws_eip.torlo-eip-nat",
            "aws_subnet.torlo-tform-pub"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "torlo-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-064719850982eb759",
            "owner_id": "004829846714",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f55ddf0e5b0b169e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "torlo-tform-rt-private-0"
            },
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_nat_gateway.terraform-tform-nat",
            "aws_vpc.torlo-tform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ec5777a8ac76c74e",
            "owner_id": "004829846714",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f87f0c168d4f6c8a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "torlo-tform-rt-private-1"
            },
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_nat_gateway.terraform-tform-nat",
            "aws_vpc.torlo-tform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "torlo-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02a3f097ee967fed2",
            "owner_id": "004829846714",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f4c2ede02558949",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "torlo-tform-rt-public"
            },
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_internet_gateway.torlo-terraform-igw",
            "aws_vpc.torlo-tform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "torlo-private-rt",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b48d80dc23fab4d8",
            "route_table_id": "rtb-064719850982eb759",
            "subnet_id": "subnet-0a9806c252af1e78e"
          },
          "depends_on": [
            "aws_route_table.torlo-private",
            "aws_subnet.torlo-tform-pri"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7f0fd697b912e91",
            "route_table_id": "rtb-0ec5777a8ac76c74e",
            "subnet_id": "subnet-09106c39f717e3b3e"
          },
          "depends_on": [
            "aws_route_table.torlo-private",
            "aws_subnet.torlo-tform-pri"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "torlo-public-rt",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec9a95a6e6ab250a",
            "route_table_id": "rtb-02a3f097ee967fed2",
            "subnet_id": "subnet-0848bb14ba7cff3bb"
          },
          "depends_on": [
            "aws_route_table.torlo-public",
            "aws_subnet.torlo-tform-pub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fa2007dcc578428",
            "route_table_id": "rtb-02a3f097ee967fed2",
            "subnet_id": "subnet-0dfccb29d913726d0"
          },
          "depends_on": [
            "aws_route_table.torlo-public",
            "aws_subnet.torlo-tform-pub"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "torlo-tform-sg-pri-elastic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:security-group/sg-00166d94495ac1c98",
            "description": "tform sg elastic pri",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00166d94495ac1c98",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              }
            ],
            "name": "torlo-tform-sg-pri-elastic",
            "name_prefix": null,
            "owner_id": "004829846714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "torlo-tform-sg-pri-elastic"
            },
            "timeouts": null,
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_vpc.torlo-tform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "torlo-tform-sg-pri-logstash",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:security-group/sg-083042f74ceff8893",
            "description": "tform sg logstash pri",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083042f74ceff8893",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5044,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5044
              }
            ],
            "name": "torlo-tform-sg-pri-ssh",
            "name_prefix": null,
            "owner_id": "004829846714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "torlo-tform-sg-pri-logstash"
            },
            "timeouts": null,
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_vpc.torlo-tform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "torlo-tform-sg-priv-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:security-group/sg-07b4795297f3bbec8",
            "description": "tform sg ssh pri",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b4795297f3bbec8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "torlo-tform-sg-priv-ssh",
            "name_prefix": null,
            "owner_id": "004829846714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "torlo-tform-sg-pri-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_vpc.torlo-tform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "torlo-tform-sg-pub-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:security-group/sg-0f5ec9a540af0bda4",
            "description": "tform sg public http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5ec9a540af0bda4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "torlo-tform-sg-pub-http",
            "name_prefix": null,
            "owner_id": "004829846714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "torlo-tform-sg-pub-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_vpc.torlo-tform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "torlo-tform-sg-pub-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:security-group/sg-0ad5c4ff5d91e351a",
            "description": "tform sg ssh pri",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad5c4ff5d91e351a",
            "ingress": [
              {
                "cidr_blocks": [
                  "185.112.172.83/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "torlo-tform-sg-pub-ssh",
            "name_prefix": null,
            "owner_id": "004829846714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "torlo-tform-sg-pri-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_vpc.torlo-tform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "torlo-tform-pri",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:subnet/subnet-0a9806c252af1e78e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.110.0/24",
            "id": "subnet-0a9806c252af1e78e",
            "map_public_ip_on_launch": false,
            "owner_id": "004829846714",
            "tags": {
              "Name": "torlo-tform-subnet-private-0"
            },
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_vpc.torlo-tform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:subnet/subnet-09106c39f717e3b3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.111.0/24",
            "id": "subnet-09106c39f717e3b3e",
            "map_public_ip_on_launch": false,
            "owner_id": "004829846714",
            "tags": {
              "Name": "torlo-tform-subnet-private-1"
            },
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_vpc.torlo-tform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "torlo-tform-pub",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:subnet/subnet-0848bb14ba7cff3bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0848bb14ba7cff3bb",
            "map_public_ip_on_launch": true,
            "owner_id": "004829846714",
            "tags": {
              "Name": "torlo-tform-subnet-public-0"
            },
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_vpc.torlo-tform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:subnet/subnet-0dfccb29d913726d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0dfccb29d913726d0",
            "map_public_ip_on_launch": true,
            "owner_id": "004829846714",
            "tags": {
              "Name": "torlo-tform-subnet-public-1"
            },
            "vpc_id": "vpc-069f984bb32be8339"
          },
          "depends_on": [
            "aws_vpc.torlo-tform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "torlo-tform-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:004829846714:vpc/vpc-069f984bb32be8339",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00bac99e13f17244c",
            "default_route_table_id": "rtb-0c8309cce1d8aeee0",
            "default_security_group_id": "sg-0ec673a80ed5339c4",
            "dhcp_options_id": "dopt-a157f0c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-069f984bb32be8339",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c8309cce1d8aeee0",
            "owner_id": "004829846714",
            "tags": {
              "Name": "torlo-tform-vpc"
            }
          }
        }
      ]
    }
  ]
}